TVB-2084 transformed from fixed to relative positioning of elements for better viewing on small resolutions. Fixed issues regarding burst preview added all components needed for it.
git-svn-id: https://repo.thevirtualbrain.org/svn/tvb/trunk@8310 1c0e02f0-7929-43c0-8fb3-3293bf43b0d1

--- a/framework_tvb/tvb/interfaces/web/static/style/section_visualisers.css
+++ b/framework_tvb/tvb/interfaces/web/static/style/section_visualisers.css
@@ -108,8 +108,8 @@ div.flot-tick-label{
 
 .matrix2d-main-canvas {
     position: absolute;
-    left:90px;
-    top:30px;
+    left:8%;
+    top:6%;
     width:80%;
     height: 80%;
 }
